CircuitBreakerGenerator fix bug